fix: Update site url

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : "개발자로서 알고 있는 지식과 경험을 기록합니다"
 name                     : "Hacoma"
 description              : "개발자로서 알고 있는 지식과 경험을 기록합니다"
-url                      : "https://hacoma.github.io/"
+url                      : "https://hacoma.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "hacoma/hacoma.github.io"
 teaser                   : "/assets/images/post/placeholder/teaser.png"
