--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://hacoma.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "hacoma/hacoma.github.io"
 teaser                   : "/assets/images/post/placeholder/teaser.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/logo/logo.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true
 words_per_minute         : 200
