fix: rewrite bio

--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Hacoma"
   avatar           : "/assets/images/bio/photo.png"
-  bio              : "밑바닥까지 파고드는 것을 좋아함"
+  bio              : "어떤 것에 대하여 밑바닥까지 파고들어<br />원리를 이해하는 것을 좋아합니다"
   location         : "Republic of Korea"
   email            : 
   links:
