--- a/_config.yml
+++ b/_config.yml
@@ -274,6 +274,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      excerpt: ""
       read_time: true
       show_date: true
       comments: true
