fix: 인스타그램 아이디 수정

--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
       url: "https://github.com/hacoma"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/hacoma.daily"
+      url: "https://www.instagram.com/hook.ring0"
 
 # Site Footer
 footer:
